--- a/start/index.html
+++ b/start/index.html
@@ -5,19 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeClan News</title>
+    <link rel="stylesheet" href="styles.css">
+    
 </head>
 <body>
     <header>
-        <h1>CodeClan News</h1>
-        <ul>
-            <li><a href = "/Home">Home</a></li>
-            <li> <a href = "/Blog" >Blog</a></li>
-            <li><a href = "/Contact" >Contact</a></li>
-        </ul>
+        <h1 id = "logo">CodeClan News</h1>
+        <nav>
+            <ul>
+                <li><a href = "/Home">Home</a></li>
+                <li> <a href = "/Blog" >Blog</a></li>
+                <li><a href = "/Contact" >Contact</a></li>
+            </ul>
+        </nav>
 
     </header>
     <main>
-        <article>
+        <article id = "start" >
             <aside>
                 <section>
                     <h2>Login</h2>
@@ -42,7 +46,7 @@
                 </section>
 
             </aside>
-            <main>
+            <main id = "latest">
                 <hgroup>
                     <h2>Latest</h2>
                     <h3>Breaking News</h3>
@@ -64,7 +68,7 @@
                 </hgroup>
             </main>
         </article>
-        <article>
+        <article id = "main">
             <hgroup>
                 <h2>Main Article Headline</h2>
                 <h3>Author Name</h3>
@@ -95,21 +99,21 @@
                     <section>
                         <div>
                             <img src="https://placebear.com/200/200" alt="cat disguised as a bear">
-                            <h3>username</h3>
-                            <h4>date</h4>
-                            <p>Some type of comment</p>
+                            <h4>username</h4>
+                            <h5>date</h5>
+                            <p>Some type of comment.....</p>
                         </div>
                         <div>
                             <img src="https://placebear.com/200/200" alt="cat disguised as a bear">
-                            <h3>username</h3>
-                            <h4>date</h4>
-                            <p>Some type of comment</p>
+                            <h4>username</h4>
+                            <h5>date</h5>
+                            <p>Some type of comment.....</p>
                         </div>
                         <div>
                             <img src="https://placebear.com/200/200" alt="cat disguised as a bear">
-                            <h3>username</h3>
-                            <h4>date</h4>
-                            <p>Some type of comment</p>
+                            <h4>username</h4>
+                            <h5>date</h5>
+                            <p>Some type of comment.....</p>
                         </div>
                     </section>
                 </section>
